remove unnecessary settings